Modify resources in routes, add description for homepage

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,2 +1,2 @@
-<h1>Pages#index</h1>
-<p>Find me in app/views/pages/index.html.erb</p>
+<h1>MathMi</h1>
+<h3>Learn about advanced math topics with ZERO previous knowledge necessary</h3>
